src/snapshots/afrotd__parser__tests__rule_2.30.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 30
  - 1
title: Vorwärtspass-Spiel
text: "Ein legales Vorwärtspass-Spiel ist der Zeitraum zwischen dem Snap und dem Moment, in dem der legale Vorwärtspass gefangen, abgefangen oder unvollständig wird."
interpretations: []
