src/snapshots/afrotd__parser__tests__rule_2.31.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 31
  - 1
title: Platz
text: "Der Platz ist die Zone innerhalb der Grenzlinien. Er enthält die Grenzlinien, die Teamzonen und den Luftraum darüber (Ausnahme: Abdeckungen (Dächer) über dem Platz)."
interpretations: []
