src/snapshots/afrotd__parser__tests__rule_2.31.6.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 31
  - 6
title: Seitenzone
text: Die Seitenzone ist der Bereich zwischen der Hash Mark und der nächsten Seitenlinie.
interpretations: []
